fix left align

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,19 @@ a:hover {
 	background: #f7f7f7;
 }
 
+.container_overview {
+	width: 1024px;
+	min-height: 200px;
+	margin: 0 auto; /* top and bottom, right and left */
+	border: 1px hidden #000;
+	/* border: none; */
+	text-align: left;
+	padding: 1em 1em 1em 1em; /* top, right, bottom, left */
+	color: #4d4b59;
+	background: #f7f7f7;
+}
+
+
 .containersmall {
 	width: 1024px;
 	min-height: 10px;
